# miem-proj

./: CMakeLists.txt  CustomGraphicsView.h  Defs.h  HumanDetector.cpp  HumanDetector.h  README.md  VideoThread.cpp  VideoThread.h  customgraphicsview.cpp  mainwindow.cpp  mainwindow.h
Release/.cmake/api/v1/reply/: codemodel-v2-022fc5bdce1a8fb2b700.json  directory-.-Release-81d42bad2bf9c8afcdae.json
Release/.cmake/api/v1/reply.prev/: cache-v2-e3c502fedb58104ccd00.json  cmakeFiles-v1-70c5fdf9e2d3ba27e60f.json  index-2023-06-01T17-22-56-0450.json  target-PoacherDetection-Release-4064e93096264393b75a.json  target-PoacherDetection_autogen-Release-bc9bb58a9901c39f2df2.json
